include/codata_constants_2018.h

ADD_IMPORT extern const double ELECTRON_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double U_ELECTRON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double ELECTRON_TAU_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TAU_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_TRITON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ELECTRON_TRITON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ELECTRON_VOLT;/**< J */
ADD_IMPORT extern const double U_ELECTRON_VOLT;/**< J */
ADD_IMPORT extern const double ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double ELECTRON_VOLT_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_ELECTRON_VOLT_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double ELECTRON_VOLT_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_ELECTRON_VOLT_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double ELECTRON_VOLT_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_ELECTRON_VOLT_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double ELECTRON_VOLT_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_ELECTRON_VOLT_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double ELECTRON_VOLT_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_ELECTRON_VOLT_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double ELEMENTARY_CHARGE;/**< C */
ADD_IMPORT extern const double U_ELEMENTARY_CHARGE;/**< C */
ADD_IMPORT extern const double ELEMENTARY_CHARGE_OVER_H_BAR;/**< A J^-1 */
ADD_IMPORT extern const double U_ELEMENTARY_CHARGE_OVER_H_BAR;/**< A J^-1 */
ADD_IMPORT extern const double FARADAY_CONSTANT;/**< C mol^-1 */
ADD_IMPORT extern const double U_FARADAY_CONSTANT;/**< C mol^-1 */
ADD_IMPORT extern const double FERMI_COUPLING_CONSTANT;/**< GeV^-2 */
ADD_IMPORT extern const double U_FERMI_COUPLING_CONSTANT;/**< GeV^-2 */
ADD_IMPORT extern const double FINE_STRUCTURE_CONSTANT;/**<  */
ADD_IMPORT extern const double U_FINE_STRUCTURE_CONSTANT;/**<  */
ADD_IMPORT extern const double FIRST_RADIATION_CONSTANT;/**< W m^2 */
ADD_IMPORT extern const double U_FIRST_RADIATION_CONSTANT;/**< W m^2 */
ADD_IMPORT extern const double FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE;/**< W m^2 sr^-1 */
ADD_IMPORT extern const double U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE;/**< W m^2 sr^-1 */
ADD_IMPORT extern const double HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double HARTREE_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_HARTREE_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double HARTREE_ENERGY;/**< J */
ADD_IMPORT extern const double U_HARTREE_ENERGY;/**< J */
ADD_IMPORT extern const double HARTREE_ENERGY_IN_EV;/**< eV */
ADD_IMPORT extern const double U_HARTREE_ENERGY_IN_EV;/**< eV */