src/codata_constants_latest.f90


real(dp), parameter, public :: ELECTRON_PROTON_MASS_RATIO=5.44617021487e-4_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_PROTON_MASS_RATIO=0.00000000033e-4_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_PROTON_MASS_RATIO"):: &
capi_105=ELECTRON_PROTON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_PROTON_MASS_RATIO") :: &
capi_U_105=U_ELECTRON_PROTON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_RELATIVE_ATOMIC_MASS=5.48579909065e-4_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_RELATIVE_ATOMIC_MASS=0.00000000016e-4_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_RELATIVE_ATOMIC_MASS"):: &
capi_106=ELECTRON_RELATIVE_ATOMIC_MASS !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_RELATIVE_ATOMIC_MASS") :: &
capi_U_106=U_ELECTRON_RELATIVE_ATOMIC_MASS !< C API dimensionless

real(dp), parameter, public :: ELECTRON_TAU_MASS_RATIO=2.87585e-4_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_TAU_MASS_RATIO=0.00019e-4_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_TAU_MASS_RATIO"):: &
capi_107=ELECTRON_TAU_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_TAU_MASS_RATIO") :: &
capi_U_107=U_ELECTRON_TAU_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO=1.370933554787e-4_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO=0.000000000045e-4_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO"):: &
capi_108=ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO") :: &
capi_U_108=U_ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO=864.058257_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO=0.000010_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO"):: &
capi_109=ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO") :: &
capi_U_109=U_ELECTRON_TO_SHIELDED_HELION_MAG__MOM__RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO=-658.2275971_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO=0.0000072_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO"):: &
capi_110=ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO") :: &
capi_U_110=U_ELECTRON_TO_SHIELDED_PROTON_MAG__MOM__RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_TRITON_MASS_RATIO=1.819200062251e-4_dp !< dimensionless
real(dp), parameter, public :: U_ELECTRON_TRITON_MASS_RATIO=0.000000000090e-4_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ELECTRON_TRITON_MASS_RATIO"):: &
capi_111=ELECTRON_TRITON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ELECTRON_TRITON_MASS_RATIO") :: &
capi_U_111=U_ELECTRON_TRITON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: ELECTRON_VOLT=1.602176634e-19_dp !< J
real(dp), parameter, public :: U_ELECTRON_VOLT=0.0_dp !< J

real(cdp), protected, public, bind(C,name="ELECTRON_VOLT"):: &
capi_112=ELECTRON_VOLT !< C API J
real(cdp), protected, public, bind(C,name="U_ELECTRON_VOLT") :: &
capi_U_112=U_ELECTRON_VOLT !< C API J

real(dp), parameter, public :: ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP=1.07354410233e-9_dp !< u
real(dp), parameter, public :: U_ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP=0.00000000032e-9_dp !< u

real(cdp), protected, public, bind(C,name="ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP"):: &
capi_113=ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u
real(cdp), protected, public, bind(C,name="U_ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
capi_U_113=U_ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u

real(dp), parameter, public :: ELECTRON_VOLT_HARTREE_RELATIONSHIP=3.6749322175655e-2_dp !< E_h
real(dp), parameter, public :: U_ELECTRON_VOLT_HARTREE_RELATIONSHIP=0.0000000000071e-2_dp !< E_h

real(cdp), protected, public, bind(C,name="ELECTRON_VOLT_HARTREE_RELATIONSHIP"):: &
capi_114=ELECTRON_VOLT_HARTREE_RELATIONSHIP !< C API E_h
real(cdp), protected, public, bind(C,name="U_ELECTRON_VOLT_HARTREE_RELATIONSHIP") :: &
capi_U_114=U_ELECTRON_VOLT_HARTREE_RELATIONSHIP !< C API E_h

real(dp), parameter, public :: ELECTRON_VOLT_HERTZ_RELATIONSHIP=2.417989242e14_dp !< Hz
real(dp), parameter, public :: U_ELECTRON_VOLT_HERTZ_RELATIONSHIP=0.0_dp !< Hz

real(cdp), protected, public, bind(C,name="ELECTRON_VOLT_HERTZ_RELATIONSHIP"):: &
capi_115=ELECTRON_VOLT_HERTZ_RELATIONSHIP !< C API Hz
real(cdp), protected, public, bind(C,name="U_ELECTRON_VOLT_HERTZ_RELATIONSHIP") :: &
capi_U_115=U_ELECTRON_VOLT_HERTZ_RELATIONSHIP !< C API Hz

real(dp), parameter, public :: ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP=8.065543937e5_dp !< m^-1
real(dp), parameter, public :: U_ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP=0.0_dp !< m^-1

real(cdp), protected, public, bind(C,name="ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP"):: &
capi_116=ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP !< C API m^-1
real(cdp), protected, public, bind(C,name="U_ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP") :: &
capi_U_116=U_ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP !< C API m^-1

real(dp), parameter, public :: ELECTRON_VOLT_JOULE_RELATIONSHIP=1.602176634e-19_dp !< J
real(dp), parameter, public :: U_ELECTRON_VOLT_JOULE_RELATIONSHIP=0.0_dp !< J

real(cdp), protected, public, bind(C,name="ELECTRON_VOLT_JOULE_RELATIONSHIP"):: &
capi_117=ELECTRON_VOLT_JOULE_RELATIONSHIP !< C API J
real(cdp), protected, public, bind(C,name="U_ELECTRON_VOLT_JOULE_RELATIONSHIP") :: &
capi_U_117=U_ELECTRON_VOLT_JOULE_RELATIONSHIP !< C API J

real(dp), parameter, public :: ELECTRON_VOLT_KELVIN_RELATIONSHIP=1.160451812e4_dp !< K
real(dp), parameter, public :: U_ELECTRON_VOLT_KELVIN_RELATIONSHIP=0.0_dp !< K

real(cdp), protected, public, bind(C,name="ELECTRON_VOLT_KELVIN_RELATIONSHIP"):: &
capi_118=ELECTRON_VOLT_KELVIN_RELATIONSHIP !< C API K
real(cdp), protected, public, bind(C,name="U_ELECTRON_VOLT_KELVIN_RELATIONSHIP") :: &
capi_U_118=U_ELECTRON_VOLT_KELVIN_RELATIONSHIP !< C API K

real(dp), parameter, public :: ELECTRON_VOLT_KILOGRAM_RELATIONSHIP=1.782661921e-36_dp !< kg
real(dp), parameter, public :: U_ELECTRON_VOLT_KILOGRAM_RELATIONSHIP=0.0_dp !< kg

real(cdp), protected, public, bind(C,name="ELECTRON_VOLT_KILOGRAM_RELATIONSHIP"):: &
capi_119=ELECTRON_VOLT_KILOGRAM_RELATIONSHIP !< C API kg
real(cdp), protected, public, bind(C,name="U_ELECTRON_VOLT_KILOGRAM_RELATIONSHIP") :: &
capi_U_119=U_ELECTRON_VOLT_KILOGRAM_RELATIONSHIP !< C API kg

real(dp), parameter, public :: ELEMENTARY_CHARGE=1.602176634e-19_dp !< C
real(dp), parameter, public :: U_ELEMENTARY_CHARGE=0.0_dp !< C

real(cdp), protected, public, bind(C,name="ELEMENTARY_CHARGE"):: &
capi_120=ELEMENTARY_CHARGE !< C API C
real(cdp), protected, public, bind(C,name="U_ELEMENTARY_CHARGE") :: &
capi_U_120=U_ELEMENTARY_CHARGE !< C API C

real(dp), parameter, public :: ELEMENTARY_CHARGE_OVER_H_BAR=1.519267447e15_dp !< A J^-1
real(dp), parameter, public :: U_ELEMENTARY_CHARGE_OVER_H_BAR=0.0_dp !< A J^-1

real(cdp), protected, public, bind(C,name="ELEMENTARY_CHARGE_OVER_H_BAR"):: &
capi_121=ELEMENTARY_CHARGE_OVER_H_BAR !< C API A J^-1
real(cdp), protected, public, bind(C,name="U_ELEMENTARY_CHARGE_OVER_H_BAR") :: &
capi_U_121=U_ELEMENTARY_CHARGE_OVER_H_BAR !< C API A J^-1

real(dp), parameter, public :: FARADAY_CONSTANT=96485.33212_dp !< C mol^-1
real(dp), parameter, public :: U_FARADAY_CONSTANT=0.0_dp !< C mol^-1

real(cdp), protected, public, bind(C,name="FARADAY_CONSTANT"):: &
capi_122=FARADAY_CONSTANT !< C API C mol^-1
real(cdp), protected, public, bind(C,name="U_FARADAY_CONSTANT") :: &
capi_U_122=U_FARADAY_CONSTANT !< C API C mol^-1

real(dp), parameter, public :: FERMI_COUPLING_CONSTANT=1.1663787e-5_dp !< GeV^-2
real(dp), parameter, public :: U_FERMI_COUPLING_CONSTANT=0.0000006e-5_dp !< GeV^-2

real(cdp), protected, public, bind(C,name="FERMI_COUPLING_CONSTANT"):: &
capi_123=FERMI_COUPLING_CONSTANT !< C API GeV^-2
real(cdp), protected, public, bind(C,name="U_FERMI_COUPLING_CONSTANT") :: &
capi_U_123=U_FERMI_COUPLING_CONSTANT !< C API GeV^-2

real(dp), parameter, public :: FINE_STRUCTURE_CONSTANT=7.2973525693e-3_dp !< dimensionless
real(dp), parameter, public :: U_FINE_STRUCTURE_CONSTANT=0.0000000011e-3_dp !< dimensionless

real(cdp), protected, public, bind(C,name="FINE_STRUCTURE_CONSTANT"):: &
capi_124=FINE_STRUCTURE_CONSTANT !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_FINE_STRUCTURE_CONSTANT") :: &
capi_U_124=U_FINE_STRUCTURE_CONSTANT !< C API dimensionless

real(dp), parameter, public :: FIRST_RADIATION_CONSTANT=3.741771852e-16_dp !< W m^2
real(dp), parameter, public :: U_FIRST_RADIATION_CONSTANT=0.0_dp !< W m^2

real(cdp), protected, public, bind(C,name="FIRST_RADIATION_CONSTANT"):: &
capi_125=FIRST_RADIATION_CONSTANT !< C API W m^2
real(cdp), protected, public, bind(C,name="U_FIRST_RADIATION_CONSTANT") :: &
capi_U_125=U_FIRST_RADIATION_CONSTANT !< C API W m^2

real(dp), parameter, public :: FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE=1.191042972e-16_dp !< W m^2 sr^-1
real(dp), parameter, public :: U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE=0.0_dp !< W m^2 sr^-1

real(cdp), protected, public, bind(C,name="FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE"):: &
capi_126=FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE !< C API W m^2 sr^-1
real(cdp), protected, public, bind(C,name="U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE") :: &
capi_U_126=U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE !< C API W m^2 sr^-1

real(dp), parameter, public :: HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP=2.92126232205e-8_dp !< u
real(dp), parameter, public :: U_HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP=0.00000000088e-8_dp !< u

real(cdp), protected, public, bind(C,name="HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP"):: &
capi_127=HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u
real(cdp), protected, public, bind(C,name="U_HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
capi_U_127=U_HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u

real(dp), parameter, public :: HARTREE_ELECTRON_VOLT_RELATIONSHIP=27.211386245988_dp !< eV
real(dp), parameter, public :: U_HARTREE_ELECTRON_VOLT_RELATIONSHIP=0.000000000053_dp !< eV

real(cdp), protected, public, bind(C,name="HARTREE_ELECTRON_VOLT_RELATIONSHIP"):: &
capi_128=HARTREE_ELECTRON_VOLT_RELATIONSHIP !< C API eV
real(cdp), protected, public, bind(C,name="U_HARTREE_ELECTRON_VOLT_RELATIONSHIP") :: &
capi_U_128=U_HARTREE_ELECTRON_VOLT_RELATIONSHIP !< C API eV

real(dp), parameter, public :: HARTREE_ENERGY=4.3597447222071e-18_dp !< J
real(dp), parameter, public :: U_HARTREE_ENERGY=0.0000000000085e-18_dp !< J

real(cdp), protected, public, bind(C,name="HARTREE_ENERGY"):: &
capi_129=HARTREE_ENERGY !< C API J
real(cdp), protected, public, bind(C,name="U_HARTREE_ENERGY") :: &
capi_U_129=U_HARTREE_ENERGY !< C API J

real(dp), parameter, public :: HARTREE_ENERGY_IN_EV=27.211386245988_dp !< eV
real(dp), parameter, public :: U_HARTREE_ENERGY_IN_EV=0.000000000053_dp !< eV

real(cdp), protected, public, bind(C,name="HARTREE_ENERGY_IN_EV"):: &
capi_130=HARTREE_ENERGY_IN_EV !< C API eV
real(cdp), protected, public, bind(C,name="U_HARTREE_ENERGY_IN_EV") :: &
capi_U_130=U_HARTREE_ENERGY_IN_EV !< C API eV
